--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">home</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="home">home</string>
-    <string name="team">team</string>
-    <string name="match">match</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="team">Team</string>
+    <string name="match">Match</string>
 </resources>
